@@ -25,7 +25,7 @@
  */
 
 /* Inet support functions, many wrappers for netdb functions
- * $Id: inet.c,v 1.94 2005-11-29 02:42:19 castaglia Exp $
+ * $Id: inet.c,v 1.95 2006-04-17 16:20:28 castaglia Exp $
  */
 
 #include "conf.h"
@@ -232,9 +232,9 @@ static conn_t *inet_initialize_connection(pool *p, xaset_t *servers, int fd,
      */
 
 #if defined(SOLARIS2) || defined(FREEBSD2) || defined(FREEBSD3) || \
-    defined(FREEBSD4) || defined(FREEBSD5) || defined(__OpenBSD__) || \
-    defined(__NetBSD__) || defined(DARWIN6) || defined(DARWIN7) || \
-    defined(DARWIN8) || \
+    defined(FREEBSD4) || defined(FREEBSD5) || defined(FREEBSD6) || \
+    defined(__OpenBSD__) || defined(__NetBSD__) || \
+    defined(DARWIN6) || defined(DARWIN7) || defined(DARWIN8) || \
     defined(SCO3) || defined(CYGWIN) || defined(SYSV4_2MP) || \
     defined(SYSV5UNIXWARE7)
 # ifdef SOLARIS2
@@ -250,9 +250,9 @@ static conn_t *inet_initialize_connection(pool *p, xaset_t *servers, int fd,
     fd = socket(addr_family, SOCK_STREAM, tcp_proto);
 
 #if defined(SOLARIS2) || defined(FREEBSD2) || defined(FREEBSD3) || \
-    defined(FREEBSD4) || defined(FREEBSD5) || defined(__OpenBSD__) || \
-    defined(__NetBSD__) || defined(DARWIN6) || defined(DARWIN7) || \
-    defined(DARWIN8) || \
+    defined(FREEBSD4) || defined(FREEBSD5) || defined(FREEBSD6) || \
+    defined(__OpenBSD__) || defined(__NetBSD__) || \
+    defined(DARWIN6) || defined(DARWIN7) || defined(DARWIN8) || \
     defined(SCO3) || defined(CYGWIN) || defined(SYSV4_2MP) || \
     defined(SYSV5UNIXWARE7)
 # ifdef SOLARIS2
