@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.739 2006-04-16 23:08:19 castaglia Exp $
+$Id: NEWS,v 1.740 2006-04-17 16:20:28 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -20,6 +20,7 @@ CVS
 - Bug 2654 - FEAT command should be subject to <Limit>.
 - Bug 2740 - TYPE command not allowed before USER/PASS, causes problem for
   `ftp -n'.
+- Bug 2777 - ProFTPD does handle data sockets properly on FreeBSD 6.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
